// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="alu-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="alu-dropdown  alu-dropdown-placement-bottomRight  alu-dropdown-hidden"
  >
    <div>
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="alu-table-filter-icon alu-table-filter-selected alu-dropdown-trigger"
  style=""
  title="Filter menu"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="alu-table-filter-icon alu-dropdown-trigger"
  style=""
  title="Filter menu"
>
  unfiltered
</span>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="alu-table-wrapper"
>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-table alu-table-default alu-table-scroll-position-left"
      >
        <div
          class="alu-table-content"
        >
          <div
            class="alu-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
              </colgroup>
              <thead
                class="alu-table-thead"
              >
                <tr>
                  <th
                    class="alu-table-column-has-actions alu-table-column-has-filters"
                  >
                    <div>
                      Name
                    </div>
                    <i
                      class="anticon anticon-filter alu-dropdown-trigger"
                      title="Filter menu"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="filter"
                        fill="currentColor"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                        />
                      </svg>
                    </i>
                  </th>
                </tr>
              </thead>
              <tbody
                class="alu-table-tbody"
              >
                <tr
                  class="alu-table-row alu-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="alu-table-column-has-actions alu-table-column-has-filters"
                  >
                    <span
                      class="alu-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jack
                  </td>
                </tr>
                <tr
                  class="alu-table-row alu-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="alu-table-column-has-actions alu-table-column-has-filters"
                  >
                    <span
                      class="alu-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Lucy
                  </td>
                </tr>
                <tr
                  class="alu-table-row alu-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="alu-table-column-has-actions alu-table-column-has-filters"
                  >
                    <span
                      class="alu-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Tom
                  </td>
                </tr>
                <tr
                  class="alu-table-row alu-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="alu-table-column-has-actions alu-table-column-has-filters"
                  >
                    <span
                      class="alu-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div
    class="alu-dropdown  alu-dropdown-placement-bottomRight  alu-dropdown-hidden"
  >
    <div
      class="alu-table-filter-dropdown"
    >
      <ul
        class="alu-dropdown-menu  alu-dropdown-menu-root alu-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="alu-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="alu-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="alu-dropdown-menu-submenu alu-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="alu-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="alu-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="alu-table-filter-dropdown-btns"
      >
        <a
          class="alu-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="alu-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div
    class="alu-dropdown  alu-dropdown-placement-bottomRight  alu-dropdown-hidden"
  >
    <div
      class="alu-table-filter-dropdown"
    >
      <ul
        class="alu-dropdown-menu  alu-dropdown-menu-root alu-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="alu-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="alu-radio-wrapper"
          >
            <span
              class="alu-radio"
            >
              <input
                class="alu-radio-input"
                type="radio"
              />
              <span
                class="alu-radio-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="alu-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="alu-radio-wrapper"
          >
            <span
              class="alu-radio"
            >
              <input
                class="alu-radio-input"
                type="radio"
              />
              <span
                class="alu-radio-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="alu-dropdown-menu-submenu alu-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="alu-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="alu-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="alu-table-filter-dropdown-btns"
      >
        <a
          class="alu-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="alu-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;
